feat: Implement purchase return numbering, batch tracking for returns, and optimize GRN item relationships with new DTO fields.